#F-119 In Progress Migrate to Java 11 and JavaFX as a module: com.ak.fx.desktop